# api/docs/swagger.json
@@ -34,6 +34,29 @@
           "surName": "Morgan",
           "DOB": "05/19/2021"
         }
+      },
+      "UpdateUser": {
+        "type": "object",
+        "properties": {
+          "userName": {
+            "type": "string"
+          },
+          "givenName": {
+            "type": "string"
+          },
+          "surName": {
+            "type": "string"
+          },
+          "DOB": {
+            "type": "string"
+          }
+        },
+        "example": {
+          "userName": "alice",
+          "givenName": "Alice",
+          "surName": "Morgan",
+          "DOB": "05/19/2021"
+        }
       }
     }
   },
@@ -183,6 +206,75 @@
           },
           "required": true
         },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "string"
+                        },
+                        "userName": {
+                          "type": "string"
+                        },
+                        "givenName": {
+                          "type": "string"
+                        },
+                        "surName": {
+                          "type": "string"
+                        },
+                        "DOB": {
+                          "type": "string"
+                        }
+                      }
+                    },
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "success": true,
+                  "data": {
+                    "id": "1a1c45c5-065a-4e39-a8d8-76f18c9e998b",
+                    "userName": "alice",
+                    "givenName": "Alice",
+                    "surName": "Morgan",
+                    "DOB": "05/19/2021"
+                  },
+                  "message": "operation was successful"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/{userId}": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Get one user",
+        "description": "",
+        "operationId": "getOneUser",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
